timesheet_token/force-app/main/default/objects/Project__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>