timesheet_token/force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Updating</fullName>
            </value>
            <value>
                <fullName>Fixing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>