timesheet_token/force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Project_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>